# Road2AI_ApplePie

./: .gitignore  ABOUT.md  AGENTS.md  G-LRAG_SPECIFICATIONS.md  PLAN.md  PROGRESS.md  pyproject.toml  state.json
config/: default.yaml
data/: stage1_sme_docs.parquet  stage2_parse_failures.jsonl  stage2_parse_failures_summary.json  summary_cache.jsonl
docs/: preprocessing.md
docs/log/: 1_pre_process.md
notebooks/: kaggle_02_summarization.ipynb
scripts/: preprocess.py
src/data/: debug_stage2_failures.py  stage1_filter.py  stage2_parse_html.py  stage3_chunking.py  stage4_summarize.py
tests/: test_sme_filter.py
vietnamese-legal-rag/: dataset_info.json
vietnamese-legal-rag/artifacts/reports/: sme_document_ids.jsonl
vietnamese-legal-rag/configs/: smecorpus.yaml
vietnamese-legal-rag/notebooks/: 01_explore_dataset.ipynb  01_explore_vietnamese_legal_dataset.ipynb
vietnamese-legal-rag/src/vlr/preprocessing/: sme_filter.py
