[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "vietnamese-legal-rag"
version = "0.1.0"
description = "Vietnamese legal RAG preprocessing and retrieval utilities"
requires-python = ">=3.10"
dependencies = [
  "pandas",
  "pyarrow",
  "beautifulsoup4",
  "lxml",
  "tqdm",
  "regex",
  "networkx",
  "pyyaml",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
